<resources>
    <string name="app_name">aBeng</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_location">Enter Location</string>
    <string name="maps">maps</string>
    <string name="latar">TODO</string>
</resources>
