<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnBack2Login"
        android:layout_width="354dp"
        android:layout_height="42dp"
        android:text="@string/back_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="365dp"
        android:layout_height="506dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack2Login"
        app:srcCompat="@drawable/segi4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="352dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/button"
        android:contentDescription="@string/latar" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_location"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#1A1919"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

</androidx.constraintlayout.widget.ConstraintLayout>